tests/baselines/reference/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndGenericClassStaticFunctionOfTheSameName.errors.txt
tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndGenericClassStaticFunctionOfTheSameName.ts(10,21): error TS2300: Duplicate identifier 'fn'.


==== tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndGenericClassStaticFunctionOfTheSameName.ts (1 errors) ====
    class clodule<T> {
        id: string;
        value: T;
    
        static fn<U>(id: U) { }
    }
    
    module clodule {
        // error: duplicate identifier expected
        export function fn<T>(x: T, y: T): T {
                        ~~
!!! error TS2300: Duplicate identifier 'fn'.
            return x;
        }
    }
    
    